--- a/index.html
+++ b/index.html
@@ -27,16 +27,18 @@
         </div>
         
         <div class="home-content">
-            <h1>Hi, I´m <span>Tiago</span></h1>
-            <h3 class="tipo-text">I work as <span></span></h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere vitae dolores nemo sequi dolore eveniet ad vero perferendis, repudiandae laborum odit voluptatem esse atque ducimus, soluta tenetur nulla in maiores?</p>
+            <h1>Prazer, <span>Tiago</span></h1>
+            <h3 class="tipo-text">Sou <span></span></h3>
+            <p>Tenho mais de 3 anos de experiência ajudando empresas e empreendedores e musicos a transformar suas ideias em soluções visuais impactantes para seus trabalhos. 
+                Especializada em branding, marketing digital, design e ilustrações para todos tipos de redes sociais, meu objetivo é criar designs únicos que não só carregem a indentidade da marca ou visual do cliente, mas também ajude no alcance do cliente.
+                Trabalho de forma colaborativa com meus clientes para entregar resultados que realmente façam a diferença no mercado.</p>
             <div class="social-icons">
                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="#"><i class="fa-brands fa-github"></i></a>
                 <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
                 <a href="#"><i class="fa-brands fa-instagram"></i></a>
             </div>
-            <a href="#" class="bttn"> Hire me </a>
+            <a href="#" class="bttn">Contrate-me</a>
         </div>
     </section>
 </body>
