--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <a href="#" class="logo">Tiago</a>
+        <a href="#" class="logo">Portifólio</a>
 
         <nav>
             <a href="#" class="active">Home</a>
