--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"> 
 
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <title>Portifólio</title>
+    <link rel="shortcut icon" href="/img/fundoi.PNG" type="image/x-icon">
+    <title>Portifólio | Tiago</title>
 </head>
 <body>
     <header>
