--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                 Especializada em branding, marketing digital, design e ilustrações para todos tipos de redes sociais, meu objetivo é criar designs únicos que não só carregem a indentidade da marca ou visual do cliente, mas também ajude no alcance do cliente.
                 Trabalho de forma colaborativa com meus clientes para entregar resultados que realmente façam a diferença no mercado.</p>
             <div class="social-icons">
-                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="#"><i class="fa-brands fa-github"></i></a>
-                <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/tiagoaltg77/"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://github.com/altg77"><i class="fa-brands fa-github"></i></a>
+                <a href="https://x.com/sonolentoaltg"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="https://www.instagram.com/tiagoand7/"><i class="fa-brands fa-instagram"></i></a>
             </div>
             <a href="#" class="bttn">Contrate-me</a>
         </div>
