--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
             <a href="#" class="bttn">Contrate-me</a>
         </div>
     </section>
+
 </body>
+<!-- Efeitos -->
 <script src="/js/scripteffect.js"></script>
 </html>
