--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="/css/extra.css">
+    <!-- <link rel="stylesheet" href="/css/extra.css">
     <link rel="stylesheet" href="/css/home.css">
-    <link rel="stylesheet" href="/css/sobremim.css">
+    <link rel="stylesheet" href="/css/sobremim.css"> 
+    <link rel="stylesheet" href="/css/servicos.css">
+    <link rel="stylesheet" href="/css/skill.css">
+    <link rel="stylesheet" href="/css/experiencia.css">
+    <link rel="stylesheet" href="/css/contato.css">-->
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"> 
 
@@ -57,7 +61,11 @@
 
     <section class="sobre-mim">
         <div class="content">
-            <div class="title"></div>
+            <div class="titulo"><span>Sobre mim</span></div>
+            <div class="sobre-detalhes">
+                <div class="left">
+                    <img src
+            </div>
         </div>
     </section>
 
