--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"> 
 
-    <link rel="shortcut icon" href="/img/fundoi.PNG" type="image/x-icon">
+    <link rel="icon" href="/img/entrada/fundoi.PNG" type="image/png">
     <title>Portifólio | Tiago</title>
 </head>
 <body>
