--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <a href="https://x.com/sonolentoaltg" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
                 <a href="https://www.instagram.com/tiagoand7/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
             </div>
-            <a href="#" class="bttn">Contrate-me</a>
+            <a href="https://wa.me/5571987556522" class="bttn">Contrate-me</a>
         </div>
 
     </section>
