--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav>
             <a href="#sobre-mim">Sobre mim</a>
             <a href="#skills">HardSkills</a>
-            <a href="#formacao">Formação</a>
+            <a href="#qualificacao">Qualificação</a>
             <a href="#meus-trabalhos">Meus Trabalhos</a>
             <a href="#servicos">Serviços</a>
             <a href="#contato">Contato</a>
@@ -62,7 +62,7 @@
             <div class="sobre-detalhes">
 
                 <div class="left">
-                    <p>Sou apaixonado por transformar ideias em visuais marcantes. Minha missão é criar designs únicos que não apenas reflitam a identidade da marca ou do cliente, mas também impulsionem seu alcance e impacto no mercado.
+                    <p>Sou apaixonado por transformar ideias em visuais marcantes. <b>Minha missão é criar designs únicos que não apenas reflitam a identidade da marca ou do cliente, mas também impulsionem seu alcance e impacto no mercado.</b>
                         Trabalho de forma colaborativa, entendendo as necessidades e objetivos de cada projeto para entregar soluções estratégicas e criativas. Meu foco é desenvolver artes que comuniquem, engajem e gerem resultados reais.
                         Seja para identidade visual, ilustrações ou campanhas digitais, estou aqui para ajudar sua marca a se destacar.</p>
                         
@@ -85,7 +85,7 @@
                 <button onclick="window.open('https://www.instagram.com/guiauves.design', '_blank')">Confira seu trabalho: @guiauves.design</button>
             </div>
 
-            <p>Uma das minhas maiores inspirações no design é Guilherme Alves, um profissional incrível que acompanha há algum tempo. Com mais de 13 mil seguidores , ele me mostrou como é possível unir criatividade, técnica e autenticidade para criar projetos que realmente impactam as pessoas. Seu trabalho me motiva a continuar evoluindo e a buscar sempre o melhor em cada criação.</p>
+            <p>Uma das minhas maiores inspirações no design <b>é Guilherme Alves</b>, um profissional incrível que acompanha há algum tempo. <b>Com mais de 13 mil seguidores</b> , ele me mostrou como é possível unir criatividade, técnica e autenticidade para criar projetos que realmente impactam as pessoas. <b>Seu trabalho me motiva a continuar evoluindo e a buscar sempre o melhor em cada criação.</b></p>
 
             <div class="image-gallery">
                 <img src="/img/inspiração/falta2dia.PNG" alt="Imagem 1">
@@ -142,14 +142,15 @@
     </section>
     
 
-    <!-- Formação -->
-    <section id="formacao">
+    <!-- Qualificação -->
+    <section id="qualificacao">
         <div class="content">
-            <div class="titulo"><span>Minha Formação</span></div>
+            <div class="titulo"><span>Qualificação</span></div>
             <div class="boxes">
                 <div class="box">
-                    <div class="topico">Educação</div>
-                    <p>Ensino Médio Completo.</p>
+                    <div class="topico">Experiência profissional</div>
+                    <p>Tenho experiência em projetos criativos com a Secondboom que tem varios trabalhos, colaborando com artistas como Locabrel, Skiter, Moforec, Mael Tayou e outros. Atuei na criação de soluções visuais como motion design, design gráfico, ilustrações digitais e web design, utilizando ferramentas como Photoshop, Illustrator, After Effects, CapCut, Visual Studio Code e Canva. Meu foco é transformar ideias em conteúdos de alta qualidade que refletem a identidade de cada cliente."
+                    </p>
                 </div>
 
                 <div class="box">
